fix bug that h1 on leading banner was not text-aligned to start on large screens but all others were

--- a/styles/_hero.scss
+++ b/styles/_hero.scss
@@ -30,6 +30,7 @@
       @media (min-width: 992px) {
         font-size: 4rem;
         line-height: 5rem;
+        text-align: start;
       }
     }
 
